Changelog for SvenMod

17/11/2022 - Version 1.2.2 (API v4.0):
- Used macro M_ARRAYSIZE
- Used variable 'realtime' instead of function 'g_pEngineFuncs->GetClientTime' in the interface 'IRender'
- Fixed crash in main menu when called method IUtils::PrintChatText

06/11/2022, 14/11/2022 - Version 1.2.1 (API v4.0):
- As always some improvements in the code
- Project configurations for game version 5.22 (<3), 5.25 and Newest
- New 'IRender' interface
- Updated sample plugin
- Fixed wrong pad in class 'CGameConsoleDialog'
- Fixed completely wrong struct 'extra_player_info_t'
- Fixed incorrect method 'Reject' in Vector class
- Added new methods for 'IClientPlugin' interface
- Added symbol signatures for Linux
- Added methods 'HookCvarChange' and 'HookEvent' (EventHook) for interface 'IHooks'
- Added methods 'ApplyReadToNetMessageBuffer', 'FindEventHook' and 'PrintChatText' for interface 'IUtils'
- Added methods 'GetCvarPointer' and 'GetCmdPointer' in convar.h
- Added more methods and constructors for 'Color' class
- Added math functions 'VectorRotate', 'VectorITransform' and 'VectorIRotate'
- Used better parser of keyvalues

03/05/2022, 11/07/2022 - Version 1.2.0 (API v3.0):
- Minor improvements in the code
- Added CMake, scripts for building on Windows/Linux (Linux project is not finished, and probably won't be finished lol)
- Added Linux equivalents for WinAPI functions
- Added 'Drop' method for interface 'IClientWeapon'
- Added 'DrawSetTextColor' method for interface 'IUtils'
- Added 'VirtualProtect', 'VirtualAlloc' and 'VirtualFree' methods for interface 'IMemoryUtils'
- Added headers 'hl_sdk/common/protocol.h', 'svenmod.h'
- Updated header 'platform.h'
- Fixed include of header 'mathlib.h'
- Replaced function '_snprintf' to 'snprintf'
- Replaced keyword '__forceinline' to macro 'FORCEINLINE' in hash map, hash table and hash dictionary
- Added file header 'sizebuf.h'
- Added several methods in 'IClient' interface
- Added support to hook network messages