@@ -23,11 +23,11 @@
 
 #define SVENMOD_MAJOR_VERSION				"1" // major
 #define SVENMOD_MINOR_VERSION				"2" // minor
-#define SVENMOD_PATCH_VERSION				"2" // patch
+#define SVENMOD_PATCH_VERSION				"3" // patch
 
 #define SVENMOD_VERSION_STRING				SVENMOD_MAJOR_VERSION "." SVENMOD_MINOR_VERSION "." SVENMOD_PATCH_VERSION
 #define SVENMOD_VERSION_STRING_FULL			SVENMOD_MAJOR_VERSION "." SVENMOD_MINOR_VERSION "." SVENMOD_PATCH_VERSION "-" SVENMOD_API_MAJOR_VERSION_STRING "." SVENMOD_API_MINOR_VERSION_STRING
-#define SVENMOD_VERSION_FILE				1,2,2,0
+#define SVENMOD_VERSION_FILE				1,2,3,0
 
 // Version of the launcher
 
